# computerd

./: .gitignore  .oxfmtignore  AGENT.md  LICENSE  oxlintrc.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: publish-gateway-image.yml
apps/mcp/: package.json  tsconfig.build.json  vite.config.ts
apps/server/: package.json  vite.config.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: android-computer-rationale.md  android-computer.md  architecture.md  browser-computer-plan.md  browser-computer.md  computer-networks.md  computer-profiles.md  display-interface-model.md  frontend-selection.md  image-management.md  input-action-design.md  playwright-browser-computer.md  product-positioning.md  systemd-adapter-selection.md  typescript-style.md  vm-computer-rationale.md  vm-computer.md
e2e/: computers.spec.ts
examples/: README.md  bash-terminal.ts  browser-cli.ts  playwright-connect.ts
scripts/: apt-packages.txt  install-apt-packages.sh  install-git-hooks.mjs  run-dev-server.mjs  run-dev.mjs  run-verify-steps.mjs  smoke-dev.mjs  smoke-remote-vm.mjs  test-e2e.mjs  verify-quick.mjs  verify.mjs
standalone/qemu-display-webrtc-demo/: Cargo.toml  README.md
standalone/qemu-display-webrtc-demo/src/: encoder.rs  framebuffer.rs  health.rs  lib.rs  main.rs  qemu_display.rs  webrtc.rs
standalone/qemu-display-webrtc-demo/static/: index.html
standalone/qemu-display-webrtc-demo/tests/: http_routes.rs
(+39 files in other folders)
