[package]
name = "qemu-display-webrtc-demo"
version = "0.1.0"
edition = "2024"
default-run = "qemu-display-webrtc-demo"

[features]
default = []
runtime = [
  "dep:glib",
  "dep:gstreamer",
  "dep:gstreamer-sdp",
  "dep:gstreamer-webrtc",
  "dep:memmap2",
  "dep:serde_bytes",
  "dep:zbus",
]

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["http1", "json", "tokio", "ws"] }
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
http = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

glib = { version = "0.21.4", optional = true }
gstreamer = { version = "0.24.5", optional = true }
gstreamer-sdp = { version = "0.24.5", optional = true }
gstreamer-webrtc = { version = "0.24.5", optional = true }
memmap2 = { version = "0.9.10", optional = true }
serde_bytes = { version = "0.11.19", optional = true }
zbus = { version = "5.14.0", optional = true, default-features = false, features = ["p2p", "serde_bytes", "tokio"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
